--- a/chef/site-cookbooks/java/templates/default/application.properties_for_spring-boot.erb
+++ b/chef/site-cookbooks/java/templates/default/application.properties_for_spring-boot.erb
@@ -1,2 +1,7 @@
 spring.view.prefix: /WEB-INF/views/
 spring.view.suffix: .jsp
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:mydata
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.dll-auto=create
