--- a/chef/site-cookbooks/java/templates/default/pom.xml_for_spring-boot.erb
+++ b/chef/site-cookbooks/java/templates/default/pom.xml_for_spring-boot.erb
@@ -35,5 +35,26 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass><%= @mailClass %></mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
