--- a/chef/site-cookbooks/java/templates/default/pom.xml_for_spring-boot.erb
+++ b/chef/site-cookbooks/java/templates/default/pom.xml_for_spring-boot.erb
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version><%= @versionOfJUnit %></version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -54,6 +54,13 @@
 				<configuration>
 					<mainClass><%= @mailClass %></mainClass>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.springframework</groupId>
+						<artifactId>springloaded</artifactId>
+						<version><%= @versionOfSpringLoaded %></version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
