--- a/chef/site-cookbooks/java/templates/default/pom.xml_for_spring-boot.erb
+++ b/chef/site-cookbooks/java/templates/default/pom.xml_for_spring-boot.erb
@@ -36,6 +36,10 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
