--- a/chef/site-cookbooks/java/templates/default/application.properties_for_spring-boot.erb
+++ b/chef/site-cookbooks/java/templates/default/application.properties_for_spring-boot.erb
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:h2:mem:mydata
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.dll-auto=create
+security.basic.enabled=false
