--- a/src/final-app/public/views/ChatRoomList.html
+++ b/src/final-app/public/views/ChatRoomList.html
@@ -8,7 +8,7 @@
 			<div class="content">
 				<div class="text"><a ng-href="#/ChatMessageList/{{chatRoom._id}}">{{chatRoom.title}}</div>
 				<div class="author">{{chatRoom.createdByUserName}}</div>
-				<div class="metadata">{{chatRoom.createdAt}}</div>
+				<div class="metadata">{{chatRoom.createdAt | date:'yyyy-MM-dd HH:mm:ss'}}</div>
 			</div>
 		</div>
 	</div>
