一部HTMLにSemanticUIを適用、ヘッダメニュー用Controller作成

--- a/src/final-app/public/views/ChatMessageList.html
+++ b/src/final-app/public/views/ChatMessageList.html
@@ -1,5 +1,5 @@
 <div class="container" ng-controller="ChatMessageListController">
-	<h1>Chat Message List</h1>
+	<h1 class="ui header">Chat Message List</h1>
 	<div class="ui comments" ng-repeat="chatMessage in chatMessages">
 		<div class="comment">
 			<a class="avatar">
