--- a/src/final-app/public/views/ChatRoomList.html
+++ b/src/final-app/public/views/ChatRoomList.html
@@ -1,5 +1,5 @@
 <div class="container" ng-controller="ChatRoomListController">
-	<h1>Chat Room List</h1>
+	<h1 class="ui header">Chat Room List</h1>
 	<div class="ui comments" ng-repeat="chatRoom in chatRooms">
 		<div class="comment">
 			<a class="avatar">
