フッタの最下部固定

--- a/src/1st-app/src/main/webapp/static/css/common.css
+++ b/src/1st-app/src/main/webapp/static/css/common.css
@@ -9,3 +9,19 @@
 	display: block;
 	margin: 0px auto;
 }
+
+.wrapper-except-footer {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -60px;
+}
+
+.push_for_footer,
+.wrapper_for_footer {
+	height: 60px;
+}
+
+.wrapper_for_footer {
+	background-color: #ffffff;
+}
